--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ProjectShiritori</string>
+    <string name="app_name">B仔個女</string>
 
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
@@ -7,6 +7,11 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="button_single_game_new">單人遊戲</string>
+    <string name="button_single_game_running">返回單人遊戲</string>
+    <string name="life">生命</string>
+    <string name="round">回合</string>
+    <string name="score">分數</string>
     <string name="button_abstain">棄權</string>
     <string name="button_skip">略過</string>
     <string name="button_reverse">逆轉</string>
